--- a/src/scss/variables-site/_colors.scss
+++ b/src/scss/variables-site/_colors.scss
@@ -1,5 +1,6 @@
 $branddark:    #2d2d2d;
 $brandcolour:  #FF5D51;
+$offwhite:     #ededed;
 
 $color__background-body: #fff;
 $color__background-screen: #f1f1f1;
