--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -47,6 +47,16 @@ article.podcast {
 	padding: 10px;
 }
 
+a.main-link {
+	&:hover {
+		.podcast-billboard {
+			h2 {
+				padding-bottom: 20px;
+			}
+		}
+	}
+}
+
 .podcast-billboard {
 	width: 100%;
 	height: 200px;
@@ -62,6 +72,8 @@ article.podcast {
 		padding: 10px;
 		margin: 0px;
 		color: white;
+		background-color: rgba(0,0,0,.4);
+		transition: all 200ms ease;
 		a, a:visited, a:focus {
 			color: white;
 		}
